# slop-pi

./: .env.example  .gitignore  .mcp.json  IMPLEMENTATION_PLAN.md  PI_API_KEY_SETUP.md  PI_DEPLOYMENT.md  PI_SETUP.md  README.md  docker-compose.yml  pyproject.toml
backend/: Makefile  check_health.py  pytest.ini  run_tests.py  test_parser.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: ai.py  barcode.py  batch_prep.py  claude.py  cron.py  deps.py  expiration.py  grocery.py  health.py  me.py  nutrition.py  planning.py  prices.py  receipts.py  recipes.py  tokens.py  usda.py
backend/app/data/: shelf_life.json
backend/app/jobs/: __init__.py  consumption.py  notifications.py  scheduler.py
backend/app/models/: __init__.py  barcode.py  batch_prep.py  expiration.py  grocery.py  nutrition.py  planning.py  prices.py  receipts.py  recipes.py
backend/app/services/: ai.py  barcode.py  batch_prep.py  enrichment.py  expiration.py  grocery.py  grocery_lists.py  healthcheck.py  notifications.py  nutrition.py  ocr.py  planning.py  prices.py  receipt_parser.py  (+5 more)
backend/scripts/: add_meals.py  create_dag_test_recipes.py  run_migration.py
backend/tests/: conftest.py
database/migrations/: v2.3.0_phase2_features.sql  v2.4.0_receipt_resolution.sql  v2.5.0_grocery_lists.sql
deploy/: ecosystem.config.js  setup-cron.sh  setup-hybrid.sh  setup-pi.sh  slop-pi.service  update.sh
docker/: Dockerfile
docs/: FRONTEND_RECEIPT_RESOLUTION_SPEC.md
mcp_server/: __init__.py  client.py  config.py  run.sh  server.py
scripts/: backup-db.sh  deploy.sh  setup-cron.sh
(+8 files in other folders)
